@@ -1,3 +1,7 @@
+2013-04-14  Karl Berry  <karl@tug.org>
+
+	* updmap.pl: wording, sync from Master.
+
 2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am ({texconfig,web2c}dir): Change texmf => texmf-dist.
